--- a/templates/admin/sport_competitors.html
+++ b/templates/admin/sport_competitors.html
@@ -65,6 +65,7 @@ async function disqualifyCompetitor(callsign) {
     try {
         const resp = await fetch('/admin/sport/' + sportId + '/competitor/' + callsign + '/disqualify', {
             method: 'POST',
+            headers: {'Content-Type': 'application/json'},
             credentials: 'same-origin'
         });
         const data = await resp.json();
