--- a/templates/base.html
+++ b/templates/base.html
@@ -661,7 +661,7 @@
         </button>
         <div class="nav-links" id="nav-links">
             <a href="/">Home</a>
-            <a href="/teams">Teams</a>
+            {% if user %}<a href="/teams">Teams</a>{% endif %}
             {% if user %}<a href="/records">Records</a>{% endif %}
             {% block nav_extra %}{% endblock %}
             <span style="float: right;">
