Clean up code review issues
- Add type=button to Participate button in sport.html
- Remove redundant span wrappers for medal icons in teams.html
- Combine duplicate user checks in base.html nav

--- a/templates/base.html
+++ b/templates/base.html
@@ -661,8 +661,10 @@
         </button>
         <div class="nav-links" id="nav-links">
             <a href="/">Home</a>
-            {% if user %}<a href="/teams">Teams</a>{% endif %}
-            {% if user %}<a href="/records">Records</a>{% endif %}
+            {% if user %}
+            <a href="/teams">Teams</a>
+            <a href="/records">Records</a>
+            {% endif %}
             {% block nav_extra %}{% endblock %}
             <span style="float: right;">
                 {% if user %}
