--- a/templates/sport.html
+++ b/templates/sport.html
@@ -26,7 +26,7 @@
         <span style="color: #38a169; font-weight: bold;">✓ You are entered in this sport</span>
         <button type="button" class="btn" style="background: #c53030; margin-left: 10px;" onclick="leaveSport()">Leave Sport</button>
         {% else %}
-        <button onclick="enterSport()" class="btn btn-success"><span class="icon">🏅</span> Participate</button>
+        <button type="button" onclick="enterSport()" class="btn btn-success">Participate</button>
         {% endif %}
     </div>
     {% endif %}
