--- a/templates/teams.html
+++ b/templates/teams.html
@@ -44,9 +44,9 @@
                 <td>{{ team.member_count }}</td>
                 <td>{{ team.total_points | int }}</td>
                 <td>
-                    {% if team.gold > 0 %}<span class="medal-count"><span class="gold">🥇{{ team.gold }}</span></span> {% endif %}
-                    {% if team.silver > 0 %}<span class="medal-count"><span class="silver">🥈{{ team.silver }}</span></span> {% endif %}
-                    {% if team.bronze > 0 %}<span class="medal-count"><span class="bronze">🥉{{ team.bronze }}</span></span> {% endif %}
+                    {% if team.gold > 0 %}<span class="medal-count">🥇{{ team.gold }}</span> {% endif %}
+                    {% if team.silver > 0 %}<span class="medal-count">🥈{{ team.silver }}</span> {% endif %}
+                    {% if team.bronze > 0 %}<span class="medal-count">🥉{{ team.bronze }}</span> {% endif %}
                     {% if team.gold == 0 and team.silver == 0 and team.bronze == 0 %}-{% endif %}
                 </td>
             </tr>
