--- a/templates/admin/sports.html
+++ b/templates/admin/sports.html
@@ -66,6 +66,7 @@
                 <option value="park">POTA Park</option>
                 <option value="call">Callsign</option>
                 <option value="grid">Grid Square</option>
+                <option value="any">Any Contact</option>
             </select>
         </div>
         <div class="form-group">
