--- a/templates/login.html
+++ b/templates/login.html
@@ -19,6 +19,7 @@
     </form>
     <div id="login-result"></div>
     <p style="margin-top: 15px;">Don't have an account? <a href="/signup">Sign up</a></p>
+    <p><a href="/forgot-password">Forgot password?</a></p>
 </div>
 
 <script>
